# some_kinda_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-config.h.in  compile_commands.json
src/: CMakeLists.txt  Common.h  main.c  my_p99_common.h
src/lyparser/: ast.c  ast.h  lexer.l  parser.y
src/util/: generic_list.c  list.h  util.c
